--- a/Site.Master
+++ b/Site.Master
@@ -40,25 +40,6 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <%--<div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" title="more options">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Inicio</a></li>
-                        <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a runat="server" href="~/Contact">Contacto</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>--%>
         <div data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
@@ -72,22 +53,27 @@
   </div>
   <div class="offcanvas-body">
       <%-- aca van los productos --%>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+   <% foreach (var art in CarritoSession())
+              {  %> 
+  <div class="col">   
+    <div class="card">
+        
+      <img src="<%:art.ImagenUrl %>" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"> <%:art.Nombre %></h5>
+        <p class="card-text"><%:art.Descripcion %></p>
+        <p class="card-text">Cantidad: <%:art.Cantidad%></p>
+        <p class="card-text"> Total: $<%:art.Precio*art.Cantidad%></p>
+        <a href="Default.aspx?idQuitar=<%:art.Id%>">Quitar</a>
+      </div>
+    </div>
+  </div>
+         <% }  %>
+</div>
     <p>Try scrolling the rest of the page to see this option in action.</p>
   </div>
 </div>
-
-        <%--<nav class="navbar bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <div id="contCarrito">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                        </svg>
-                    </div>
-                </a>
-            </div>
-        </nav>--%>
-
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
