--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,17 +1,17 @@
-﻿/* Move down content because we have a fixed navbar that is 50px tall */
+﻿ Move down content because we have a fixed navbar that is 50px tall 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
+ Wrapping element 
+ Set some basic padding to keep content from hitting the edges 
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
+ Set widths on the form inputs since otherwise they're 100% wide 
 input,
 select,
 textarea {
@@ -19,7 +19,7 @@ textarea {
 }
 
 
-/* Responsive: Portrait tablets and up */
+ Responsive: Portrait tablets and up 
 @media screen and (min-width: 768px) {
     .jumbotron {
         margin-top: 20px;
@@ -35,6 +35,7 @@ textarea {
     background-color: #777;
     border-color: #fff
 }
+
 
 img.card-img-top {
     width: 75% !important
@@ -58,3 +59,14 @@ a{
     text-decoration: none;
 }
 
+.row.row-cols-1.row-cols-md-3.g-4 {
+    display: flex;
+    flex-direction: column !important;
+}
+
+.contImg {
+    width: 40% !important;
+}
+a{
+    text-decoration:none;
+}
