--- a/Site.Master
+++ b/Site.Master
@@ -7,15 +7,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Mi aplicación ASP.NET</title>
-
+    <title><%: Page.Title %> - TP Web</title>
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
 </head>
 <body>
 
@@ -53,25 +51,25 @@
   </div>
   <div class="offcanvas-body">
       <%-- aca van los productos --%>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div cssclass="row row-cols-1 row-cols-md-3 g-4">
    <% foreach (var art in CarritoSession())
               {  %> 
-  <div class="col">   
-    <div class="card">
-        
-      <img src="<%:art.ImagenUrl %>" class="card-img-top" alt="...">
+  <div cssclass="col">   
+    <div cssclass="card">
+        <div class="contImg"><img src="<%:art.ImagenUrl %>" class="card-img-top" alt="..."></div>
       <div class="card-body">
         <h5 class="card-title"> <%:art.Nombre %></h5>
         <p class="card-text"><%:art.Descripcion %></p>
         <p class="card-text">Cantidad: <%:art.Cantidad%></p>
         <p class="card-text"> Total: $<%:art.Precio*art.Cantidad%></p>
-        <a href="Default.aspx?idQuitar=<%:art.Id%>">Quitar</a>
+        <button><a href="Default.aspx?idQuitar=<%:art.Id%>">Quitar</a></button> 
       </div>
     </div>
   </div>
-         <% }  %>
+         <% }  %>   
 </div>
-    <p>Try scrolling the rest of the page to see this option in action.</p>
+      <button><a href="Default.aspx?vaciarCarrito=1">Vaciar carrito</a></button>
+      <p>Total:<%:TotalCarrito()%> </p>
   </div>
 </div>
         <div class="container body-content">
@@ -79,13 +77,17 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <%--<p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>--%>
+
             </footer>
+            <link href="Content/Site.css" rel="stylesheet" />
+            
               <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+
   </script>
         </div>
 
