--- a/Content/Site.css
+++ b/Content/Site.css
@@ -62,6 +62,7 @@ svg.bi.bi-cart {
 button {
     border-radius: 10px !important;
     background-color:black;
+    width:auto;
 }
 a {
     color: #fbfbfb !important;
@@ -108,6 +109,11 @@ input#MainContent_txtBoxBuscar {
 }
 .offcanvas-header, .offcanvas-body {
     background-color: aliceblue;
+}
+
+.offcanvas-body {
+    background-color: aliceblue;
+    padding-bottom: 45px !important;
 }
 button:hover {
     transform: scale(1.2, 1.2);
